# simple_plane_fitting

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: clustering.hpp  plane_fitting.hpp  types.hpp  util.hpp
